# mnemosyne

./: .gitignore  ARCHITECTURE.md  Cargo.toml  E2E-TESTING.md
.github/workflows/: ci.yml  e2e.yml
code_editor/: Cargo.toml
code_editor/src/: edit.rs  error.rs  lib.rs
code_search/: Cargo.toml
code_search/src/: error.rs  index.rs  query.rs
code_storage/: Cargo.toml
code_storage/src/: lib.rs  repo.rs
core_functions/: Cargo.toml
core_functions/src/: error.rs  loader.rs  registry.rs
core_functions/src/clojure/: core.clj
doc/: E2E-TESTING.md
e2e/: .gitignore  README.md  analyze-carryover.py  run-phase2.sh  run.sh
e2e/docker/: agent.Dockerfile
e2e/docker/litellm/: config.yaml
e2e/tasks/bugfix-clj/: task.yaml
e2e/tasks/bugfix-clj-2/: task.yaml
e2e/tasks/bugfix-clj-2/fixture/: Dockerfile  prompt.md
e2e/tasks/bugfix-clj-2/fixture/project/: README.md
e2e/tasks/bugfix-clj-2/fixture/project/src/dates/: epoch.clj
e2e/tasks/bugfix-clj-2/fixture/project/src/schedule/: weekly.clj
e2e/tasks/bugfix-clj-2/grader/: .gitignore  Dockerfile  build.sh
e2e/tasks/bugfix-clj-2/grader/golden/: happy_path_test.clj
e2e/tasks/bugfix-clj-2/grader/harness/: Cargo.toml
e2e/tasks/bugfix-clj-2/grader/harness/src/: main.rs
e2e/tasks/bugfix-clj-2/grader/hidden_tests/: regressions_test.clj
e2e/tasks/bugfix-clj/fixture/: Dockerfile  prompt.md
e2e/tasks/bugfix-clj/fixture/project/: README.md
e2e/tasks/bugfix-clj/fixture/project/src/dates/: epoch.clj  format.clj  interval.clj  parse.clj  zone.clj
e2e/tasks/bugfix-clj/grader/: .gitignore  Dockerfile  build.sh
e2e/tasks/bugfix-clj/grader/golden/: happy_path_test.clj
e2e/tasks/bugfix-clj/grader/harness/: Cargo.toml
e2e/tasks/bugfix-clj/grader/harness/src/: main.rs
e2e/tasks/bugfix-clj/grader/hidden_tests/: regressions_test.clj
e2e/tasks/bugfix-py/: task.yaml
e2e/tasks/bugfix-py-2/: task.yaml
e2e/tasks/bugfix-py-2/fixture/: Dockerfile  prompt.md
e2e/tasks/bugfix-py-2/fixture/project/app/: __init__.py  history.py  importing.py  models.py  routes.py  service.py  validation.py
e2e/tasks/bugfix-py-2/grader/: grade.py
e2e/tasks/bugfix-py-2/grader/golden/: test_happy_path.py
e2e/tasks/bugfix-py-2/grader/hidden_tests/: test_regressions.py
e2e/tasks/bugfix-py/fixture/: Dockerfile  prompt.md
e2e/tasks/bugfix-py/fixture/project/app/: __init__.py  errors.py  models.py  pagination.py  routes.py  service.py  timeutil.py  validation.py
e2e/tasks/bugfix-py/grader/: Dockerfile  grade.py
e2e/tasks/bugfix-py/grader/golden/: test_happy_path.py
e2e/tasks/bugfix-py/grader/hidden_tests/: test_regressions.py
e2e/tasks/logs-analysis/: task.yaml
e2e/tasks/logs-analysis-2/: task.yaml
e2e/tasks/logs-analysis-2/fixture/: Dockerfile  prepare.sh  prompt.md
e2e/tasks/logs-analysis-2/grader/: grade.py
e2e/tasks/logs-analysis/fixture/: Dockerfile  generate.py  prepare.sh  prompt.md
e2e/tasks/logs-analysis/grader/: grade.py
e2e/tasks/sadserver-webstack/: task.yaml
e2e/tasks/sadserver-webstack/fixture/: .gitignore  Dockerfile  compose_break.py  logwriter.sh  prepare.sh  prompt.md  restart-services.sh  start-app.sh  start.sh
e2e/tasks/sadserver-webstack/fixture/app/: app.py
e2e/tasks/sadserver-webstack/fixture/nginx/: app.conf
e2e/tasks/sadserver-webstack/fixture/webstack/: app.env
e2e/tasks/sadserver-webstack/grader/: fault_catalog.py  grade.py
execution_engine/: Cargo.toml
execution_engine/src/: runtime.rs  value.rs
inference_engine/: Cargo.toml
inference_engine/src/: engine.rs  error.rs
mnemosyne-code-editor/: Cargo.toml
mnemosyne-code-editor/src/: ast.rs  edit.rs  error.rs  lib.rs  zipper.rs
mnemosyne-code-search/: Cargo.toml
mnemosyne-code-search/src/: error.rs  index.rs  lib.rs  query.rs
mnemosyne-code-storage/: Cargo.toml
mnemosyne-code-storage/src/: error.rs  lib.rs  repo.rs
mnemosyne-core-functions/: Cargo.toml
mnemosyne-core-functions/src/: error.rs  lib.rs  loader.rs
mnemosyne-core-functions/src/clojure/: shell.clj  templates.clj
mnemosyne-core-functions/tests/: shell_suite.rs
mnemosyne-execution-engine/: Cargo.toml
mnemosyne-execution-engine/src/: error.rs  handle.rs  lib.rs  runtime.rs  shell_native.rs  value.rs
mnemosyne-execution-engine/tests/: runtime_smoke.rs  substrate_guardrail.rs
mnemosyne-inference-engine/: Cargo.toml
mnemosyne-inference-engine/src/: engine.rs  error.rs  lib.rs  llm.rs  tool.rs
mnemosyne-inference-engine/tests/: define_function.rs  tool_loop.rs
mnemosyne-interface/: Cargo.toml
mnemosyne-interface/assets/: index.html
mnemosyne-interface/src/: adapter.rs  anthropic.rs  error.rs  lib.rs  main.rs  openai_compat.rs  server.rs
mnemosyne-mcp/: Cargo.toml  README.md
mnemosyne-mcp-core/: Cargo.toml
mnemosyne-mcp-core/src/: jsonrpc.rs  lib.rs  server.rs  tool.rs  types.rs
mnemosyne-mcp-server/: Cargo.toml
mnemosyne-mcp-server/src/: main.rs
mnemosyne-mcp-server/tests/: smoke.rs
mnemosyne-mcp/src/: annotations.rs  clj.rs  indexer.rs  lib.rs  seed.rs  state.rs
mnemosyne-mcp/src/tools/: annotate.rs  eval.rs  lookup.rs  mod.rs  save.rs
mnemosyne-mcp/tests/: server_flow.rs
mnemosyne-memory/: Cargo.toml
mnemosyne-memory/src/: edn.rs  episode.rs  error.rs  lib.rs  store.rs
mnemosyne-semantic-search/: Cargo.toml
mnemosyne-semantic-search/src/: embedder.rs  error.rs  index.rs  lib.rs
mnemosyne-symbol-registry/: Cargo.toml
mnemosyne-symbol-registry/src/: error.rs  lib.rs  registry.rs  trust.rs  vref.rs
