[workspace]
members = [
    "mnemosyne-code-storage",
    "mnemosyne-code-search",
    "mnemosyne-semantic-search",
    "mnemosyne-execution-engine",
    "mnemosyne-core-functions",
    "mnemosyne-code-editor",
    "mnemosyne-inference-engine",
    "mnemosyne-memory",
    "mnemosyne-interface",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"

[workspace.dependencies]
# Clojurust interpreter (git-only, not published to crates.io)
cljrs-eval   = { git = "https://github.com/csm/clojurust" }
cljrs-value  = { git = "https://github.com/csm/clojurust" }
cljrs-reader = { git = "https://github.com/csm/clojurust" }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Internal crates
mnemosyne-code-storage    = { path = "mnemosyne-code-storage" }
mnemosyne-semantic-search = { path = "mnemosyne-semantic-search" }
mnemosyne-code-search     = { path = "mnemosyne-code-search" }
mnemosyne-execution-engine = { path = "mnemosyne-execution-engine" }
mnemosyne-core-functions  = { path = "mnemosyne-core-functions" }
mnemosyne-code-editor     = { path = "mnemosyne-code-editor" }
mnemosyne-inference-engine = { path = "mnemosyne-inference-engine" }
mnemosyne-memory           = { path = "mnemosyne-memory" }
mnemosyne-interface        = { path = "mnemosyne-interface" }
