[workspace]
members = [
    "mnemosyne-code-storage",
    "mnemosyne-code-search",
    "mnemosyne-semantic-search",
    "mnemosyne-execution-engine",
    "mnemosyne-core-functions",
    "mnemosyne-code-editor",
    "mnemosyne-symbol-registry",
    "mnemosyne-inference-engine",
    "mnemosyne-memory",
    "mnemosyne-interface",
    "mnemosyne-mcp-core",
    "mnemosyne-mcp",
    "mnemosyne-mcp-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"

[workspace.dependencies]
# Clojurust interpreter (published on crates.io)
cljrs-value    = "0.1.221"
cljrs-reader   = "0.1.221"
cljrs-types    = "0.1.221"
cljrs-env      = "0.1.221"
cljrs-eval     = "0.1.221"
cljrs-gc       = "0.1.221"
cljrs-interp   = "0.1.221"
cljrs-builtins = "0.1.221"
cljrs-stdlib   = "0.1.221"
cljrs-runtime  = "0.1.221"
# Async IO / networking substrate (fully async, core.async over tokio)
cljrs-async = "0.1.221"
cljrs-io    = "0.1.221"
cljrs-net   = "0.1.221"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Async trait objects
async-trait = "0.1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Internal crates
mnemosyne-code-storage    = { path = "mnemosyne-code-storage" }
mnemosyne-semantic-search = { path = "mnemosyne-semantic-search" }
mnemosyne-code-search     = { path = "mnemosyne-code-search" }
mnemosyne-execution-engine = { path = "mnemosyne-execution-engine" }
mnemosyne-core-functions  = { path = "mnemosyne-core-functions" }
mnemosyne-code-editor     = { path = "mnemosyne-code-editor" }
mnemosyne-inference-engine = { path = "mnemosyne-inference-engine" }
mnemosyne-symbol-registry  = { path = "mnemosyne-symbol-registry" }
mnemosyne-memory           = { path = "mnemosyne-memory" }
mnemosyne-interface        = { path = "mnemosyne-interface" }
mnemosyne-mcp-core         = { path = "mnemosyne-mcp-core" }
# default-features = false so consumers (e.g. the server binary) control the
# heavy `semantic` feature themselves.
mnemosyne-mcp              = { path = "mnemosyne-mcp", default-features = false }
