[package]
name = "execution_engine"
description = "Clojure execution engine — interprets Clojure forms via clojurust"
version.workspace = true
edition.workspace = true

[dependencies]
cljrs-eval.workspace   = true
cljrs-value.workspace  = true
cljrs-reader.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
