[package]
name = "mnemosyne-code-editor"
description = "Structural Clojure code editor — parses, traverses, and rewrites Clojure ASTs programmatically"
version.workspace = true
edition.workspace = true

[dependencies]
mnemosyne-execution-engine.workspace = true
cljrs-reader.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
