[package]
name = "mnemosyne-code-storage"
description = "Git-backed code storage — clone, read, write, and iterate repositories"
version.workspace = true
edition.workspace = true

[dependencies]
git2 = "0.20"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
