[package]
name = "mnemosyne-core-functions"
description = "Standard library of Clojure functions and reusable template forms for mnemosyne"
version.workspace = true
edition.workspace = true

[dependencies]
mnemosyne-execution-engine.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
