[package]
name = "mnemosyne-inference-engine"
description = "Inference engine — wires a pluggable LLM backend with execution, storage, search, and editing"
version.workspace = true
edition.workspace = true

[dependencies]
mnemosyne-code-storage.workspace = true
mnemosyne-symbol-registry.workspace = true
mnemosyne-code-search.workspace = true
mnemosyne-semantic-search.workspace = true
mnemosyne-execution-engine.workspace = true
mnemosyne-core-functions.workspace = true
mnemosyne-code-editor.workspace = true
mnemosyne-memory.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockall = "0.13"
