[package]
name = "mnemosyne-mcp-core"
description = "Model Context Protocol core — JSON-RPC framing, MCP lifecycle, tool trait, stdio transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
