[package]
name = "mnemosyne-symbol-registry"
description = "Versioned Clojure symbol resolution with git-pinned commits and signature verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mnemosyne-code-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
